// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders CoverageEnabledCard with all prop options: {"hasTestCoverage":false} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300\\">
  <div class=\\"flex flex-wrap items-start justify-between gap-2 border-b border-ink-200 p-4\\">
    <div class=\\"space-y-1\\">
      <h4 class=\\"text-sm leading-4\\">Code Coverage</h4>
      <p class=\\"text-xs leading-6 text-vanilla-400\\">
        When active, DeepSource will report code coverage issues and metrics.
      </p>
    </div>
    <div class=\\"flex items-center gap-x-2 rounded-l-full rounded-r-full border px-2.5 py-0.5 border-ink-50 bg-ink-200\\"><span class=\\"h-1.5 w-1.5 rounded-full bg-vanilla-400\\"></span> <span class=\\"text-xxs font-semibold uppercase leading-6 text-vanilla-400\\">
        Reporting inactive
      </span></div>
  </div>
  <enable-coverage-steps></enable-coverage-steps>
</div>"
`;

exports[`renders CoverageEnabledCard with all prop options: {"hasTestCoverage":null} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300\\">
  <div class=\\"flex flex-wrap items-start justify-between gap-2 border-b border-ink-200 p-4\\">
    <div class=\\"space-y-1\\">
      <h4 class=\\"text-sm leading-4\\">Code Coverage</h4>
      <p class=\\"text-xs leading-6 text-vanilla-400\\">
        When active, DeepSource will report code coverage issues and metrics.
      </p>
    </div>
    <div class=\\"flex items-center gap-x-2 rounded-l-full rounded-r-full border px-2.5 py-0.5 border-ink-50 bg-ink-200\\"><span class=\\"h-1.5 w-1.5 rounded-full bg-vanilla-400\\"></span> <span class=\\"text-xxs font-semibold uppercase leading-6 text-vanilla-400\\">
        Reporting inactive
      </span></div>
  </div>
  <enable-coverage-steps></enable-coverage-steps>
</div>"
`;

exports[`renders CoverageEnabledCard with all prop options: {"hasTestCoverage":true} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300\\">
  <div class=\\"flex flex-wrap items-start justify-between gap-2 border-b border-ink-200 p-4\\">
    <div class=\\"space-y-1\\">
      <h4 class=\\"text-sm leading-4\\">Code Coverage</h4>
      <p class=\\"text-xs leading-6 text-vanilla-400\\">
        When active, DeepSource will report code coverage issues and metrics.
      </p>
    </div>
    <div class=\\"flex items-center gap-x-2 rounded-l-full rounded-r-full border px-2.5 py-0.5 border-juniper border-opacity-10 bg-juniper bg-opacity-5\\"><span class=\\"h-1.5 w-1.5 rounded-full bg-juniper-500\\"></span> <span class=\\"text-xxs font-semibold uppercase leading-6 text-juniper-300\\">
        Reporting active
      </span></div>
  </div>
  <enable-coverage-steps></enable-coverage-steps>
</div>"
`;

exports[`renders CoverageEnabledCard with all prop options: {"loading":false,"hasTestCoverage":false} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300\\">
  <div class=\\"flex flex-wrap items-start justify-between gap-2 border-b border-ink-200 p-4\\">
    <div class=\\"space-y-1\\">
      <h4 class=\\"text-sm leading-4\\">Code Coverage</h4>
      <p class=\\"text-xs leading-6 text-vanilla-400\\">
        When active, DeepSource will report code coverage issues and metrics.
      </p>
    </div>
    <div class=\\"flex items-center gap-x-2 rounded-l-full rounded-r-full border px-2.5 py-0.5 border-ink-50 bg-ink-200\\"><span class=\\"h-1.5 w-1.5 rounded-full bg-vanilla-400\\"></span> <span class=\\"text-xxs font-semibold uppercase leading-6 text-vanilla-400\\">
        Reporting inactive
      </span></div>
  </div>
  <enable-coverage-steps></enable-coverage-steps>
</div>"
`;

exports[`renders CoverageEnabledCard with all prop options: {"loading":false,"hasTestCoverage":null} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300\\">
  <div class=\\"flex flex-wrap items-start justify-between gap-2 border-b border-ink-200 p-4\\">
    <div class=\\"space-y-1\\">
      <h4 class=\\"text-sm leading-4\\">Code Coverage</h4>
      <p class=\\"text-xs leading-6 text-vanilla-400\\">
        When active, DeepSource will report code coverage issues and metrics.
      </p>
    </div>
    <div class=\\"flex items-center gap-x-2 rounded-l-full rounded-r-full border px-2.5 py-0.5 border-ink-50 bg-ink-200\\"><span class=\\"h-1.5 w-1.5 rounded-full bg-vanilla-400\\"></span> <span class=\\"text-xxs font-semibold uppercase leading-6 text-vanilla-400\\">
        Reporting inactive
      </span></div>
  </div>
  <enable-coverage-steps></enable-coverage-steps>
</div>"
`;

exports[`renders CoverageEnabledCard with all prop options: {"loading":false,"hasTestCoverage":true} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300\\">
  <div class=\\"flex flex-wrap items-start justify-between gap-2 border-b border-ink-200 p-4\\">
    <div class=\\"space-y-1\\">
      <h4 class=\\"text-sm leading-4\\">Code Coverage</h4>
      <p class=\\"text-xs leading-6 text-vanilla-400\\">
        When active, DeepSource will report code coverage issues and metrics.
      </p>
    </div>
    <div class=\\"flex items-center gap-x-2 rounded-l-full rounded-r-full border px-2.5 py-0.5 border-juniper border-opacity-10 bg-juniper bg-opacity-5\\"><span class=\\"h-1.5 w-1.5 rounded-full bg-juniper-500\\"></span> <span class=\\"text-xxs font-semibold uppercase leading-6 text-juniper-300\\">
        Reporting active
      </span></div>
  </div>
  <enable-coverage-steps></enable-coverage-steps>
</div>"
`;

exports[`renders CoverageEnabledCard with all prop options: {"loading":false} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300\\">
  <div class=\\"flex flex-wrap items-start justify-between gap-2 border-b border-ink-200 p-4\\">
    <div class=\\"space-y-1\\">
      <h4 class=\\"text-sm leading-4\\">Code Coverage</h4>
      <p class=\\"text-xs leading-6 text-vanilla-400\\">
        When active, DeepSource will report code coverage issues and metrics.
      </p>
    </div>
    <div class=\\"flex items-center gap-x-2 rounded-l-full rounded-r-full border px-2.5 py-0.5 border-ink-50 bg-ink-200\\"><span class=\\"h-1.5 w-1.5 rounded-full bg-vanilla-400\\"></span> <span class=\\"text-xxs font-semibold uppercase leading-6 text-vanilla-400\\">
        Reporting inactive
      </span></div>
  </div>
  <enable-coverage-steps></enable-coverage-steps>
</div>"
`;

exports[`renders CoverageEnabledCard with all prop options: {"loading":null,"hasTestCoverage":false} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300\\">
  <div class=\\"flex flex-wrap items-start justify-between gap-2 border-b border-ink-200 p-4\\">
    <div class=\\"space-y-1\\">
      <h4 class=\\"text-sm leading-4\\">Code Coverage</h4>
      <p class=\\"text-xs leading-6 text-vanilla-400\\">
        When active, DeepSource will report code coverage issues and metrics.
      </p>
    </div>
    <div class=\\"flex items-center gap-x-2 rounded-l-full rounded-r-full border px-2.5 py-0.5 border-ink-50 bg-ink-200\\"><span class=\\"h-1.5 w-1.5 rounded-full bg-vanilla-400\\"></span> <span class=\\"text-xxs font-semibold uppercase leading-6 text-vanilla-400\\">
        Reporting inactive
      </span></div>
  </div>
  <enable-coverage-steps></enable-coverage-steps>
</div>"
`;

exports[`renders CoverageEnabledCard with all prop options: {"loading":null,"hasTestCoverage":null} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300\\">
  <div class=\\"flex flex-wrap items-start justify-between gap-2 border-b border-ink-200 p-4\\">
    <div class=\\"space-y-1\\">
      <h4 class=\\"text-sm leading-4\\">Code Coverage</h4>
      <p class=\\"text-xs leading-6 text-vanilla-400\\">
        When active, DeepSource will report code coverage issues and metrics.
      </p>
    </div>
    <div class=\\"flex items-center gap-x-2 rounded-l-full rounded-r-full border px-2.5 py-0.5 border-ink-50 bg-ink-200\\"><span class=\\"h-1.5 w-1.5 rounded-full bg-vanilla-400\\"></span> <span class=\\"text-xxs font-semibold uppercase leading-6 text-vanilla-400\\">
        Reporting inactive
      </span></div>
  </div>
  <enable-coverage-steps></enable-coverage-steps>
</div>"
`;

exports[`renders CoverageEnabledCard with all prop options: {"loading":null,"hasTestCoverage":true} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300\\">
  <div class=\\"flex flex-wrap items-start justify-between gap-2 border-b border-ink-200 p-4\\">
    <div class=\\"space-y-1\\">
      <h4 class=\\"text-sm leading-4\\">Code Coverage</h4>
      <p class=\\"text-xs leading-6 text-vanilla-400\\">
        When active, DeepSource will report code coverage issues and metrics.
      </p>
    </div>
    <div class=\\"flex items-center gap-x-2 rounded-l-full rounded-r-full border px-2.5 py-0.5 border-juniper border-opacity-10 bg-juniper bg-opacity-5\\"><span class=\\"h-1.5 w-1.5 rounded-full bg-juniper-500\\"></span> <span class=\\"text-xxs font-semibold uppercase leading-6 text-juniper-300\\">
        Reporting active
      </span></div>
  </div>
  <enable-coverage-steps></enable-coverage-steps>
</div>"
`;

exports[`renders CoverageEnabledCard with all prop options: {"loading":null} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300\\">
  <div class=\\"flex flex-wrap items-start justify-between gap-2 border-b border-ink-200 p-4\\">
    <div class=\\"space-y-1\\">
      <h4 class=\\"text-sm leading-4\\">Code Coverage</h4>
      <p class=\\"text-xs leading-6 text-vanilla-400\\">
        When active, DeepSource will report code coverage issues and metrics.
      </p>
    </div>
    <div class=\\"flex items-center gap-x-2 rounded-l-full rounded-r-full border px-2.5 py-0.5 border-ink-50 bg-ink-200\\"><span class=\\"h-1.5 w-1.5 rounded-full bg-vanilla-400\\"></span> <span class=\\"text-xxs font-semibold uppercase leading-6 text-vanilla-400\\">
        Reporting inactive
      </span></div>
  </div>
  <enable-coverage-steps></enable-coverage-steps>
</div>"
`;

exports[`renders CoverageEnabledCard with all prop options: {"loading":true,"hasTestCoverage":false} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300\\">
  <div class=\\"flex flex-wrap items-start justify-between gap-2 border-b border-ink-200 p-4\\">
    <div class=\\"space-y-1\\">
      <h4 class=\\"text-sm leading-4\\">Code Coverage</h4>
      <p class=\\"text-xs leading-6 text-vanilla-400\\">
        When active, DeepSource will report code coverage issues and metrics.
      </p>
    </div>
    <div class=\\"h-coverage-badge w-32 animate-pulse rounded-full bg-ink-200\\"></div>
  </div>
  <enable-coverage-steps></enable-coverage-steps>
</div>"
`;

exports[`renders CoverageEnabledCard with all prop options: {"loading":true,"hasTestCoverage":null} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300\\">
  <div class=\\"flex flex-wrap items-start justify-between gap-2 border-b border-ink-200 p-4\\">
    <div class=\\"space-y-1\\">
      <h4 class=\\"text-sm leading-4\\">Code Coverage</h4>
      <p class=\\"text-xs leading-6 text-vanilla-400\\">
        When active, DeepSource will report code coverage issues and metrics.
      </p>
    </div>
    <div class=\\"h-coverage-badge w-32 animate-pulse rounded-full bg-ink-200\\"></div>
  </div>
  <enable-coverage-steps></enable-coverage-steps>
</div>"
`;

exports[`renders CoverageEnabledCard with all prop options: {"loading":true,"hasTestCoverage":true} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300\\">
  <div class=\\"flex flex-wrap items-start justify-between gap-2 border-b border-ink-200 p-4\\">
    <div class=\\"space-y-1\\">
      <h4 class=\\"text-sm leading-4\\">Code Coverage</h4>
      <p class=\\"text-xs leading-6 text-vanilla-400\\">
        When active, DeepSource will report code coverage issues and metrics.
      </p>
    </div>
    <div class=\\"h-coverage-badge w-32 animate-pulse rounded-full bg-ink-200\\"></div>
  </div>
  <enable-coverage-steps></enable-coverage-steps>
</div>"
`;

exports[`renders CoverageEnabledCard with all prop options: {"loading":true} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300\\">
  <div class=\\"flex flex-wrap items-start justify-between gap-2 border-b border-ink-200 p-4\\">
    <div class=\\"space-y-1\\">
      <h4 class=\\"text-sm leading-4\\">Code Coverage</h4>
      <p class=\\"text-xs leading-6 text-vanilla-400\\">
        When active, DeepSource will report code coverage issues and metrics.
      </p>
    </div>
    <div class=\\"h-coverage-badge w-32 animate-pulse rounded-full bg-ink-200\\"></div>
  </div>
  <enable-coverage-steps></enable-coverage-steps>
</div>"
`;

exports[`renders CoverageEnabledCard with all prop options: {} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300\\">
  <div class=\\"flex flex-wrap items-start justify-between gap-2 border-b border-ink-200 p-4\\">
    <div class=\\"space-y-1\\">
      <h4 class=\\"text-sm leading-4\\">Code Coverage</h4>
      <p class=\\"text-xs leading-6 text-vanilla-400\\">
        When active, DeepSource will report code coverage issues and metrics.
      </p>
    </div>
    <div class=\\"flex items-center gap-x-2 rounded-l-full rounded-r-full border px-2.5 py-0.5 border-ink-50 bg-ink-200\\"><span class=\\"h-1.5 w-1.5 rounded-full bg-vanilla-400\\"></span> <span class=\\"text-xxs font-semibold uppercase leading-6 text-vanilla-400\\">
        Reporting inactive
      </span></div>
  </div>
  <enable-coverage-steps></enable-coverage-steps>
</div>"
`;
